removed linenos from highlighted code block

--- a/_posts/2014-07-22-phantom1.md
+++ b/_posts/2014-07-22-phantom1.md
@@ -6,7 +6,7 @@ layout: default
 This is a first blog post. In it I shall put all sorts of things.
 Here is a code snippet:
 
-{% highlight python linenos %}
+{% highlight python %}
 def my_function(str):
     print str + ' is awesome!'
 
