--- a/_posts/2014-07-23-phantom2.md
+++ b/_posts/2014-07-23-phantom2.md
@@ -4,6 +4,6 @@ layout: default
 ---
 
 This is a second post. Perhaps it refers to the first post, and wants to include
-a [link to it.]({{ site.url }}{% post_url 2014-07-22-phantom1 %})
+a [link to it.]({{ site.url }}/{% post_url 2014-07-22-phantom1 %})
 
 And then the post has more to say.
