working on post layouts

--- a/_posts/2014-07-22-phantom1.md
+++ b/_posts/2014-07-22-phantom1.md
@@ -1,6 +1,6 @@
 ---
 title: Phantom Test Post #1
-layout: default
+layout: post
 ---
 
 This is a first blog post. In it I shall put all sorts of things.
