--- a/_posts/2014-07-23-phantom2.md
+++ b/_posts/2014-07-23-phantom2.md
@@ -1,6 +1,6 @@
 ---
 title: Phantom Post #2
-layout: default
+layout: post
 ---
 
 This is a second post. Perhaps it refers to the first post, and wants to include
