MathJax is now working

--- a/_posts/2014-07-23-phantom2.md
+++ b/_posts/2014-07-23-phantom2.md
@@ -1,19 +1,9 @@
 ---
-title: Phantom Post #2
+title: Phantom Post  2
 layout: post
 ---
 
 This is a second post. Perhaps it refers to the first post, and wants to include
 a [link to it.]({{ site.baseurl }}{% post_url 2014-07-22-phantom1 %})
 
-And then the post has more to say.
-
-Here it will say tons more:
-;alkjs;lkdjfjjfjfjflakj;lku ;nvaliue;lknr;li
-laknpoualkn; ;alksud;
-
-a;lskdy;g a;lnd;lkan
-
-;lakshdoia;lknvpoi lakjsdpoiu  ;lkajsdpoiu hghhgirelsepaewinv;lknapoc8p84lkicpoan
-lakjhpoiujn a;lds  adklah aisudpnap3ip98e;ailc;n;qiu
-p08aupoicn;nq;ow8u;aoisjd;lknv;
+{{ page.date }}
