updated date for EG04

--- a/EG_main04.tex
+++ b/EG_main04.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number One Fall 2013
+% Euclidean Handout Number One 
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600, Fall 2013}
-\date{22 September} 
+\date{24 September} 
 
 \begin{document}
 
