fixed title tag on post for 9/24

--- a/_posts/2014-09-24-wendt.md
+++ b/_posts/2014-09-24-wendt.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-Title: Mr Wendt's Russian Seminar Experience
+title: Mr Wendt's Russian Seminar Experience
 ---
 
 Wow. What a way to break onto the scene. Today Mr Wendt gave his first presentation
