--- a/EG_main10.tex
+++ b/EG_main10.tex
@@ -14,7 +14,7 @@
 \fvset{fontsize=\normalsize}
 \usepackage{multicol}
 \usepackage{pdfpages}
-\usepackage{arcs}
+\usepackage{fourier}
 
 %%%% Theorem Evironments
 \theoremstyle{definition}
@@ -30,8 +30,8 @@
 %%%%%
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
-\author[]{Math 3600, Fall 2013}
-\date{6 November}
+\author[]{Math 3600, Fall 2014}
+\date{12 November}
 
 \begin{document}
 
@@ -69,9 +69,9 @@ If a triangle has two angle bisectors which are congruent (measured from the ver
 \end{conjecture}
 
 \begin{conjecture}
-Let $BC$ be a chord of circle $\mathcal{C}$, let $\overarc{BC}$ be the arc of $\mathcal{C}$ which is bounded by $B$ and $C$ and does not contain the center of $\mathcal{C}$.
-Let $M$ be the midpoint of $\overarc{BC}$.
-For a point $A$ on the arc $\overarc{BC}$, show that as $A$ moves along the arc from $B$ to $M$, the sums $AB+AC$ increase.
+Let $BC$ be a chord of circle $\mathcal{C}$, let $\widearc{BC}$ be the arc of $\mathcal{C}$ which is bounded by $B$ and $C$ and does not contain the center of $\mathcal{C}$.
+Let $M$ be the midpoint of $\widearc{BC}$.
+For a point $A$ on the arc $\widearc{BC}$, show that as $A$ moves along the arc from $B$ to $M$, the sums $AB+AC$ increase.
 \end{conjecture}
 
 
