correct post for nov 14

--- a/_posts/2014-11-14-slow.md
+++ b/_posts/2014-11-14-slow.md
@@ -11,3 +11,6 @@ Then we took some time to work on Task 10.1, and to mourn the passing of [Alexan
 Grothendieck][AG].
 
 [AG]: http://en.wikipedia.org/wiki/Alexander_Grothendieck
+
+Also, I handed out copies of the fourth issue of the journal. You can find this in the
+usual place on this web site.
