add question on square inscribed in isosceles right triangle to EG13

--- a/EG_main13.tex
+++ b/EG_main13.tex
@@ -85,6 +85,10 @@ Expand on the statement of the last conjecture--find some theorems and prove the
 The \emph{hypotenuse-leg} Theorem 7.2 can be proved using the theory of equal content. Find such a proof.
 \end{problem}
 
+\begin{question}
+There are two ways to inscribe a square in an isosceles right triangle. Which one has the greater content?
+\end{question}
+
 \begin{conjecture}[The Parallelogram Law]\label{conj:parallelogram-law}
 Let $ABCD$ be a parallelogram. Then the squares on the diagonals taken together have equal content with the squares on the four sides taken together.
 \end{conjecture}
