wrote post for 11/21

--- a/_posts/2014-11-19-full.md
+++ b/_posts/2014-11-19-full.md
@@ -3,9 +3,13 @@ layout: post
 title: A Full Day&colon; Nov 19
 ---
 
+_Note: This post is corrected! The original version of this post stated that Miss
+Hatchett gave a construction for Challenge 11.1. This was an error. She actually handled
+Challenge 11.2._
+
 We had lots of progress today!
 
-Miss Hatchett gave a 3 step construction for Challenge 11.1.
+Miss Hatchett gave a 3 step construction for Challenge 11.2.
 
 Miss Herington gave a 4 step construction for Challenge 11.3.
 
