--- a/journal/2014F/TEG-cover.tex
+++ b/journal/2014F/TEG-cover.tex
@@ -7,15 +7,24 @@
 \thispagestyle{empty}
 \begin{center}
 {\Huge Transactions\\ in\\ \textbf{Euclidean Geometry}}
-
 \vspace{1in}
-
 \includegraphics[width=1.1\textwidth]{cover-image.png}
-
-
-
 \vfill
-{\Huge Issue \# 5}
+{\Huge Issue \# 6}
 \end{center}
+
+\includepdf[pages=-]{1.pdf}
+\includepdf[pages=-]{2.pdf}
+
+\includepdf[pages=-]{4.pdf}
+\includepdf[pages=-]{5.pdf}
+\includepdf[pages=-]{5aa.pdf}
+\includepdf[pages=-]{3.pdf}
+\includepdf[pages=-]{5a.pdf}
+\includepdf[pages=-]{6.pdf}
+\includepdf[pages=-]{7.pdf}
+\includepdf[pages=-]{10.pdf}
+\includepdf[pages=-]{8.pdf}
+\includepdf[pages=-]{9.pdf}
 
 \end{document}
