updated dates on EG1-16 for spring 2015

--- a/EG_main09.tex
+++ b/EG_main09.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number Two Fall 2013
+% Euclidean Handout Number nine
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -29,8 +29,8 @@
 %%%%%
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
-\author[]{Math 3600, Fall 2014}
-\date{10 November}
+\author[]{Math 3600}
+\date{Spring 2015}
 
 \begin{document}
 
