--- a/EG_main01.tex
+++ b/EG_main01.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number One Fall 2014
+% Euclidean Handout Number One 
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -29,8 +29,8 @@
 %%%%%
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
-\author[Math 3600]{Math 3600, Fall 2014}
-\date{25 August}
+\author[Math 3600]{Math 3600}
+\date{Spring 2015}
 
 \begin{document}
 
