--- a/EG_main02.tex
+++ b/EG_main02.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number Two Fall 2013
+% Euclidean Handout Number Two 
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -29,8 +29,8 @@
 %%%%%
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
-\author[]{Math 3600, Fall 2014}
-\date{5 September}
+\author[]{Math 3600}
+\date{Spring 2015}
 
 \begin{document}
 
