--- a/EG_main03.tex
+++ b/EG_main03.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number One Fall 2013
+% Euclidean Handout Number One
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -30,8 +30,8 @@
 
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
-\author[]{Math 3600, Fall 2014}
-\date{10 September}
+\author[]{Math 3600}
+\date{Spring 2015}
 
 \begin{document}
 
