--- a/EG_main04.tex
+++ b/EG_main04.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number One 
+% Euclidean Handout Number Four
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -30,8 +30,8 @@
 
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
-\author[]{Math 3600, Fall 2013}
-\date{24 September} 
+\author[]{Math 3600}
+\date{Spring 2015} 
 
 \begin{document}
 
