--- a/EG_main06.tex
+++ b/EG_main06.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number One Fall 2013
+% Euclidean Handout Number six
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -29,8 +29,8 @@
 %%%%%
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
-\author[Math 3600]{Math 3600, Fall 2014}
-\date{23 October}
+\author[Math 3600]{Math 3600}
+\date{Spring 2015}
 
 \begin{document}
 
