--- a/EG_main10.tex
+++ b/EG_main10.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number Two Fall 2013
+% Euclidean Handout Number Ten
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -30,8 +30,8 @@
 %%%%%
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
-\author[]{Math 3600, Fall 2014}
-\date{12 November}
+\author[]{Math 3600}
+\date{Spring 2015}
 
 \begin{document}
 
