--- a/EG_main01.tex
+++ b/EG_main01.tex
@@ -248,7 +248,7 @@ Accept them and move on.
 
 \subsection*{More about grades}
 The most important thing you can do to achieve a good grade in this course is to get actively involved.
-\marginnote{I have put a significant amount of material on the course web page about this semester's experiment in Standards Based Assessment.}
+\marginnote{I have put a significant amount of material on the course web page about this semester's experiment in \emph{Specifications Grading}.}
 Prove things, share you work in presentations and in writing.
 At the end of the semester, I will assign grades in a holistic way.
 We will have a midterm and a final, but these are just another chance for you to make a good impression.
