updates for bad formatting

--- a/_posts/2015-03-02-new-words.md
+++ b/_posts/2015-03-02-new-words.md
@@ -35,9 +35,9 @@ the leadership bits and we eventually got this definition on the board:
 That is a mouthful, but it works. Then I set this big, open-ended challenge.
 
 > **Challenge P**: Find, state carefully, and prove conjectures about these new terms
->     * same/opposite side of a line
->     * convex
-> focus on things that seems obvious or important.
+> (1) same/opposite side of a line; and
+> (2) convex.
+> Focus on things that seems obvious or important.
 
 How should this set of ideas help us with 4.2 or J?
 
