updated handouts Eg01 - Eg19 + conclusion to Fall 2015 dates

--- a/EG_main01.tex
+++ b/EG_main01.tex
@@ -6,7 +6,7 @@
 %%%% Packages to make things pretty
 \usepackage{amsmath,amsthm}
 \usepackage{booktabs}
-\usepackage{graphicx}
+\usepackage{graphicx}		
 \setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
 \graphicspath{{graphics/}}
 \usepackage{units}
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[Math 3600]{Math 3600}
-\date{Spring 2015}
+\date{Fall 2015}
 
 \begin{document}
 
