--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number One Fall 2013
+% Euclidean Handout 
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -30,8 +30,8 @@
 
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
-\author[Math 3600]{Math 3600, Fall 2014}
-\date{12 December}
+\author[Math 3600]{Math 3600}
+\date{Fall 2015}
 
 \begin{document}
 
