--- a/EG_main10.tex
+++ b/EG_main10.tex
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Spring 2015}
+\date{Fall 2015}
 
 \begin{document}
 
