write post for 8/26, update posts for 8/24 and class conj

--- a/_posts/2015-08-24-first-day.md
+++ b/_posts/2015-08-24-first-day.md
@@ -9,12 +9,13 @@ the modes of work we will use for class. Here is a run-down of what happened:
 
 Mrs Day presented work on conjecture 1.1, addressing the first statement.
 
-    Theorem (Day-Davis): Let ABCD be a rhombus. Then angle ABC is congruent to
-    angle ADC.
+>  **Theorem (Day-Davis)**: Let ABCD be a rhombus. Then angle ABC is
+>  congruent to angle ADC.
 
 Mr Rundall took the chalk next, and discussion led to this, which we will add to our list of class conjectures.
 
-    Conjecture A (Rundall): The second statement of Conjecture 1.1 is false.
+>  **Conjecture A (Rundall)**: The second statement of Conjecture 1.1 is
+>  false.
 
 Miss Kirkpatrick then started work on this, but elected to pass the chalk as time expired. I hope to see a fresh attack on this on Wednesday.
 
