write post for week 4

--- a/_posts/25-09-2015-week5.md
+++ b/_posts/25-09-2015-week5.md
@@ -22,6 +22,10 @@ And there was a picture of Conjecture H, but the message I got did not attribute
 
 (As reported by Mr Ratz.)
 
+Mr Ratz began with an attack on Conjecture 2.1 and Conjecture F at the same time. It seems there was some discussion and an adjustment, but ultimately these two items are considered closed.
 
+Mr Rundall attempted Conjecture 2.4, but this was not accepted by the class as complete.
+
+Miss Wulfekuhle settled Conjecture 2.3 by giving a construction of a kite and a proof that her object was indeed a kite.
 
 
