corrected post for week 3: wrote post for week 5

--- a/_posts/25-09-2015-week5.md
+++ b/_posts/25-09-2015-week5.md
@@ -1,31 +1,50 @@
 ---
 layout: post
-title: Week Three Wrap up
+title: Week Five Wrapup
 
 ---
 
-What happened in week three? I don't really know. But the reports I got from
-Mrs Day and Mr Ratz tell me this:
+This week we returned to a regular schedule of three meetings. Also, we had our
+first individual assessment meetings. I appreciate that each of you took time
+to meet with me outside of the regular class schedule.
 
-### Wednesday 9 September
+### Monday 21 September
 
-(As reported by Mrs Day, mostly with pictures of the board.)
+Mr Sorensen took another crack at 3.1. This was a more focused effort, aiming
+at exactly the statement of Conjecture 3.1 and no more. It did not quite satisfy the class.
 
-Ms Davis spent a marathon session on a neat approach to finishing Conjecture 1.2. It seems the class was not convinced, ultimately. But I think the approach
-was pretty clever. I think that _finishing_ that argument will require us to look at what the phrase "point E lies inside the rhombus ABCD" might actually mean, since Euclid doesn't define it.
+Mr Matthes proved that Conjecture 3.3 is a theorem if Conjecture 3.1 is a theorem.
 
-Miss Kirkpatrick proved Conjecture G.
+Mr Rundall renewed his attempt at Conjecture 1.2/Conjecture E. The class is
+still not convinced.
 
-And there was a picture of Conjecture H, but the message I got did not attribute it to anyone.
+Mr Ratz proved Conjecture 3.5.
 
-### Friday 11 September
+### Wednesday 23 September
 
-(As reported by Mr Ratz.)
+Mr Sorensen proved that Conjecture 3.1 is true. Note that this means we know
+Conjectures 3.2 and 3.3 are true, too. This is one of the joys of the axiomatic method---we can work in several directions at once, and sometimes one simple argument will close up multiple things at once.
 
-Mr Ratz began with an attack on Conjecture 2.1 and Conjecture F at the same time. It seems there was some discussion and an adjustment, but ultimately these two items are considered closed.
+Mr Matthes tried Conjecture 3.6 in two different ways. Each one ultimately having the problem of an "overweighted construction." This is a common difficulty, and now you all know how to look for it.
 
-Mr Rundall attempted Conjecture 2.4, but this was not accepted by the class as complete.
+Miss Wulfekuhle proved Conjecture 3.6.
 
-Miss Wulfekuhle settled Conjecture 2.3 by giving a construction of a kite and a proof that her object was indeed a kite.
+Miss Kirkpatrick shared a list of six different things, any one of which would enable her to finish Conjecture 3.4. Discussion ensued.
 
+### Friday 25 September
 
+Miss Kirkpatrick proved the following theorem, which shows that Conjecture 3.4 is false:
+
+> **Theorem (Kirkpatrick)**: It is possible to construct a quadrilateral ABCD
+> such that angle ABC and angle ADC are right angles and segment AD is
+> congruent to segment BC, but the quadrilateral ABCD is not a rectangle.
+
+Mrs Day proved the following theorem near Conjecture 3.4:
+
+> **Theorem (Day)**: Let ABCD be a quadrilateral such that angle ABC and
+> angle ADC are right angles and AB is congruent to CD. Then ABCD is a rectangle if and only if AB is parallel to CD.
+
+Mr Matthes proved Conjecture 3.7.
+
+Then Mr Spiess took up Task 4.1. This is going to be a longer discussion, but
+we ran out of time. We will pick up there on Monday.
