update dates to fall 2016

--- a/EG_main03.tex
+++ b/EG_main03.tex
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2015}
+\date{Fall 2016}
 
 \begin{document}
 
@@ -64,13 +64,16 @@ Let $R$ be a rectangle. Then each pair of opposite sides of $R$ is a pair of con
 The two diagonals of a rectangle are congruent and bisect each other.
 \end{conjecture}
 
-\begin{fullwidth}
-\newthought{These conjectures describe} some qualities that are common to all rectangles. Mathematicians say that these are \emph{necessary conditions} for having a rectangle.
+%\begin{fullwidth}
+\newthought{These conjectures} describe some qualities that are common to all rectangles. Mathematicians say that these are \emph{necessary conditions} for having a rectangle.
 If a figure is a rectangle, then these properties are ``necessarily'' also true. Now we shall try to go in the opposite direction.
 The following conjectures are possible answers to the question, ``What kind of information does one need to claim that that our figure is a rectangle?''
 Of course, we can use the definition above--that is one of the important roles of a definition, to test when we are allowed to use a word.
 But what we want now are \emph{sufficient conditions}, these are conditions that allow us to conclude that our figure is a rectangle by checking something other than the definition.
-\end{fullwidth}
+%\end{fullwidth}
+\marginnote[-80pt]{We will later see an example of conditions which are both
+\emph{necessary} and \emph{sufficient} for something, and thus provide an example of an \emph{equivalent statement}.}
+
 
 \begin{conjecture}\label{conj:opp-congruent-implies-rectangle}
 Let $ABCD$ be a quadrilateral such that angles $\angle ABC$ and $\angle ADC$ are right angles.
@@ -82,7 +85,10 @@ Let $ABCD$ be a quadrilateral such that angles $\angle ABC$ and $\angle ADC$ are
 If segments $AB$ and $CD$ are parallel, then $ABCD$ is a rectangle.
 \end{conjecture}
 
-Notice the importance that pairs of parallel lines play in those.
+Notice the importance that pairs of parallel lines play in these statements.
+
+\clearpage
+
 \marginnote[20pt]{These results don't \emph{look} to be about rectangles.}
 
 \begin{conjecture}[Midline Theorem] \label{conj:midline-theorem}
