--- a/EG_main14.tex
+++ b/EG_main14.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2015}
+\date{Fall 2016}
 
 \begin{document}
 
@@ -63,7 +63,7 @@ Given two lines $\ell$ and $m$ and a point $P$ not on either line, construct a c
 \end{challenge}
 
 \begin{conjecture}\label{conj:content-triangle}
-Let $ABC$ be a triangle, $\overleftrightarrow{DE}$ a line parallel to the base $BC$, and $F$ the midpoint of segment $DE$, where $D$ lies on ray $AB$ and $E$ lies on ray $AC$. Let $AF$ meet $BC$ at $G$. Then $G$ is the midpoint of $BC$.
+Let $ABC$ be a triangle, $DE$ a line parallel to the base $BC$, and $F$ the midpoint of segment $DE$, where $D$ lies on ray $AB$ and $E$ lies on ray $AC$. Let $AF$ meet $BC$ at $G$. Then $G$ is the midpoint of $BC$.
 \end{conjecture}
 
 
