--- a/EG_main16.tex
+++ b/EG_main16.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2015}
+\date{Fall 2016}
 
 \begin{document}
 
@@ -44,7 +44,7 @@
 \section{The Regular Pentagon Rides Again}
 
 
-The next three problems concern the following construction template for inscribing a regular pentagon in a circle. 
+The next three tasks concern the following construction template for inscribing a regular pentagon in a circle. 
 
 \vspace{.5in}
 
@@ -61,6 +61,7 @@ Given a circle with center $O$,
 \item Draw circle $\odot B(IJ)$, get points $K, L$ as intersections with the given circle.
 \item (five steps) Draw segments $BK, KJ, JI, IL, LB$.
 \end{compactenum}
+\marginnote[-60pt]{The notation $\odot A(BC)$ means a circle with center $A$ and radius congruent to segment $BC$.}
 
 \vspace{.5in}
 
