--- a/EG_main19.tex
+++ b/EG_main19.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2015}
+\date{Fall 2016}
 
 \begin{document}
 
@@ -64,7 +64,7 @@ Let $ABC$ be a triangle. Let a line $\ell$ cut the (extended) sides of $ABC$ at 
 
 
 \begin{center}
-\includegraphics[scale=.25]{Menelaus.pdf}
+\includegraphics[width=.9\textwidth]{Menelaus.pdf}
 \end{center}
 
 \begin{problem}
@@ -78,12 +78,12 @@ Show the converse is also true!
 and the segments are interpreted as \emph{signed} segments, where the direction of travel matters!
 
 \begin{problem}[Ceva's Theorem] \label{prob:Ceva-theorem}
-Let $ABC$ be a triangle, and let $P$ be any point inside the tirangle. Draw lines from the vertices through $P$ meeting the opposite sides at $D, E, F$. Show that 
+Let $ABC$ be a triangle, and let $P$ be any point inside the triangle. Draw lines from the vertices through $P$ meeting the opposite sides at $D, E, F$. Show that 
 \[ AD\cdot BF\cdot CE = BD \cdot CF \cdot AE \]
 \end{problem}
 
 \begin{center}
-\includegraphics[scale=.25]{Ceva.pdf}
+\includegraphics[width=.9\textwidth]{Ceva.pdf}
 \end{center}
 
 \begin{problem}
