--- a/EG_main07.tex
+++ b/EG_main07.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2015}
+\date{Fall 2016}
 
 \begin{document}
 
@@ -100,6 +100,10 @@ It is also part of the folklore that Thales was so overjoyed at the discovery of
 I don't know if this is true--I've also heard such a story associated with the Pythagoreans and their famous triangle theorem, though it was 100 oxen. 
 Euclid's \emph{Elements} is really an ancient Greek textbook. 
 It seems clear that the method of axiomatic work typical of mathematics originated somehow with the Greeks before Euclid--say with Thales or with the Pythagoreans. But all of the literature has been lost to the ages.}
+
+This is a case of a set of \emph{equivalent conditions}. We have stated it
+here with ``if and only if'' language, but we also could have said ``for angle $\angle ACB$ to be a right angle it is necessary and sufficient that $C$ lies on the circle with diameter $AB$.'' The necessity is in Conjecture \ref{conj:thales2}. The sufficiency is in Conjecture \ref{conj:thales1}.
+%Whatever choice of terms we use, we are saying that knowing one thing (that $\angle ACB$ is a right angle) is exactly the same situation as knowing another thing (that $C$ lies on the circle with diameter $AB$.)
 
 \vfill
 \end{document}
