update EG_main01.tex and add details to instr manual.tex

--- a/EG_main01.tex
+++ b/EG_main01.tex
@@ -204,7 +204,7 @@ The ideal question here starts with the phrase ``Excuse me. I don't understand\d
 \section*{What are we up to?}
 
 It is likely that the way this course is conducted is new to you.
-\marginnote{This course is a particular flavor of Inquiry Based Learning known as a Modified Moore Method. Our principal ``modifications'' from R.L. Moore's method are (1) the use of a textbook as reference, and (2) allowing collaboration. (Also, I generally like my students.)}
+\marginnote{This course is a particular flavor of Inquiry Based Learning known as a Modified Moore Method. Our principal ``modifications'' from R.L. Moore's method are (1) the use of a textbook as reference, and (2) allowing collaboration.}
 Let me share some perspective about what will happen, and why I've arranged things this way.
 
 %\subsection*{Something about our community and my view of what it is...}
