--- a/instructors_manual.tex
+++ b/instructors_manual.tex
@@ -32,7 +32,7 @@
 
 \title{Euclidean Geometry}
 \author[Instructor's Manual]{Instructor's Manual}
-\date{Fall 2013} 
+\date{Spring 2016} 
 
 \begin{document}
 
@@ -52,7 +52,7 @@ Then I give some contextual notes for each item in the script, section-by-sectio
 
 \subsection{General Orientation}
 
-
+idea of course: situational factors, big idea, main goals. idea of flexibility.\\
 
 general non-sense goes here. philosophical advice. aims of the course. orientation stuff.  replace this later.\\
 
@@ -110,15 +110,14 @@ I mention that collaboration is fine, but credit must be given.
 At this point, we are usually just over time, so I let the class go with wishes for good luck.\\[.1in]
 \end{compactdesc}
 
-\subsection{Every Other Day}
+\subsection{Subsequent Meetings}
 
+include note about usual progress.
 
-\subsection{Student Made Conjectures}
+\subsection{Student Made Conjectures \& the missing defns}
 
 insight as to controlled conjecturing settings. basic ideas behind approach.
 
-
-\subsection{The Missing Definitions}
 
 making definitions, why and how. 
 
@@ -128,12 +127,14 @@ euclid's definitions are sometimes crappy:
 1. "point" really?
 2.rhombus vs square vs rectangle
 
-\subsection{The Hidden Problem Set}
-
-list of things: definitions \& theorems.
 
 
-\subsection{Exams}
+
+\subsection{Assessment}
+
+daily work: specs approach. exams. assessment interviews.\\
+
+
 I give one midterm examination and a final exam.
 The midterm examination is in-class, and must be very focused.
 I tend to pick four questions that get at important mathematical skills I might not have seen everyone perform, yet.
@@ -150,14 +151,17 @@ This is the challenging part of the exam: to notice the error, prove it is an er
 If I have a question if a student deserves an A, quality work on this problem can change my mind.
 An example exam is at the end of this guide.
 
+\subsection{Advanced Students}
+
+\subsection{Course Web Site \& The Class Blog}
+
+
 \subsection{The Class Journal}
 
-
-\subsection{The Class Blog}
-
+[[reference to paper about class journal in maa notes]]
 
 
-
+\subsection{The Final Meeting}
 
 \clearpage
 \setcounter{section}{1}
@@ -215,7 +219,7 @@ If students are encouraged, they will often ask good mathematical questions abou
 \end{question}
 
 \begin{conjecture}
-Students very often come to class believing this is property of rhombi, and they want to use it on the first day.
+Students very often come to class believing this is a property of rhombi, and they want to use it on the first day.
 They get disappointed when it is pointed out this property is not part of the definition, so it is unavailable.
 This conjecture lets them shore up their belief in the statement.
 \end{conjecture}
@@ -227,7 +231,12 @@ This result often gets proved very quickly, as it is a simple triangle congruenc
 \clearpage
 \section{The Geometry of Kites}
 
+
+\clearpage
+\section{Appendix: Supplementary Documents}
+
+syllabus, student conjectures list from fall 2015, exams from fall 2015, reflective writing prompts, specs/standards docs, writing info docs, conclusion handout
+
 \end{document}
 
-%sagemathcloud={"zoom_width":100}
-%sagemathcloud={"zoom_width":100}
+
