more detail to outline of instr manual.tex

--- a/instructors_manual.tex
+++ b/instructors_manual.tex
@@ -38,6 +38,10 @@
 
 \maketitle
 
+\begin{marginfigure}
+    \includegraphics{NPC}
+\end{marginfigure}
+
 
 \setcounter{section}{0}
 \section{Instructor's Preface}
