add material on geometry of kites to instr manual

--- a/instructors_manual.tex
+++ b/instructors_manual.tex
@@ -16,7 +16,7 @@
 \usepackage{pdfpages}
 \usepackage{paralist}
 
-%%%% Theorem Evironments
+%%%% Theorem Environments
 \theoremstyle{definition}
 \swapnumbers
 \newtheorem{problem}{Problem}[section]
@@ -44,6 +44,7 @@
 
 
 \setcounter{section}{0}
+\setcounter{problem}{0}
 \section{Instructor's Preface}
 
 This opening section is a set of notes aimed at an instructor who wishes to use these notes for the first time.
@@ -218,8 +219,8 @@ I also intervene after the presentation to discuss what it means to enumerate st
 
 \begin{question}
 It is often the case that the first solution a class finds for the previous conjecture is just a special case.
-This encourages a discussion which can lead to the general construciton of the whole family of rhombi having a given side.
-If students are encouraged, they will often ask good mathematical questions about the results here, and generate lots of official questions and conjectures for the class list.
+This encourages a discussion which can lead to the general construction of the whole family of rhombi having a given side.
+If students are encouraged, they will often ask good mathematical questions about the results here, and generate lots of official questions and conjectures for the class list. I have included this item in the official task list (rather than just waiting to bring it up in class) to make the point to students that they should start considering this kind of question.
 \end{question}
 
 \begin{conjecture}
@@ -229,11 +230,49 @@ This conjecture lets them shore up their belief in the statement.
 \end{conjecture}
 
 \begin{conjecture}
-This result often gets proved very quickly, as it is a simple triangle congruence argument.
+This result often gets proved very quickly, as it is a simple triangle congruence argument. I always stop things for a short discussion about how making an extra hypothesis can keep us from being stuck: we get to claim progress and we focus attention on what remains to be considered. I encourage them to work this way.
 \end{conjecture}
 
 \clearpage
+\setcounter{section}{2}
+\setcounter{problem}{0}
 \section{The Geometry of Kites}
+
+This section of the tasks is designed to get students thinking about pushing their techniques, but being watchful for what is really true. Each of the statements here is an attempted generalization of a statement the students will have already considered for rhombi. It is my experience that students will not initially consider a non-convex kite. Otherwise, my classes will show up the first day claiming to have finished all of these. I avoid mentioning the word convex until well after the students have discovered a need for the concept. In this setting, my students usually come up with a other language for a particular example (like a ``dart'' or a ``Star Trek kite'') and that is enough for now.
+
+\begin{conjecture}
+This is false. Rather, it is only partially true. A simple argument with congruent triangles will establish that one pair of opposite sides in a kite is always congruent. The other pair need not be. 
+
+Students often have trouble stating their result precisely, and this should lead to a conversation about setting up notation and using it as a vehicle for clarity. After some attempts to state which pair of angles are congruent using natural language descriptions, students can appreciate the power and utility of naming the vertices of the kite and stating things in those terms. If notation doesn't magically appear, I usually ask the students to do a 2 minute writing exercise for a "good version" of the statement. Then I pair them up to critique for 2 minutes, and then we have a class discussion starting from their work. ("Please share an example where your partner's work is good.") If we move briskly, this is a well-spent 10 minutes.
+
+The other conversation that comes up here is about how to prove something is false. Given the work on Conjecture 1.1, this is a chance to remind them about how counterexamples work: give and explicit construction of the example and prove it has the properties required. I do not always have this conversation in this exact spot, just to keep things moving.
+\end{conjecture}
+
+\begin{conjecture}
+Again, this is false, but it requires the students to imagine a non-convex figure. The conversation about counterexamples should come up here. 
+\end{conjecture}
+
+\begin{problem}
+There is lots of room to work in this task. A student may or may not give the most general construction possible. I use this as an opportunity to have students ask questions and make conjectures about how flexible or free this construction is? It is not hard to get three or four interesting questions out of this. I add these to the task sequence immediately. Given the time to think about it in a brainstorming session, it is possible to get a conjecture along the lines of ``Given two segment and an angle, it is possible to construct a kite having the given segments as sides and the given angle between those sides." I have had classes state it as "Given a rhombus ABCD, it is possible to make choices in Ms. Y's construction to construct a rhombus congruent to ABCD."
+\end{problem}
+
+\begin{conjecture}
+Again, this is false. Sometimes, students will approach this one in a non-constructive way, proving a statement like ``If ABCD is a kite and a parallelogram, then it is rhombus,'' taking it as a given that there exists a kite which is not a rhombus. Depending on the resolution of the 
+previous items, they may already know that.
+\end{conjecture}
+
+\begin{conjecture}
+This leads to some good productive confusion. Expect students to have a disagreement about what is meant by the word ``diagonal.'' Some will think of it as a segment, and others will think of it as a line. I let the students have a conversation to sort it out. 
+
+Many students will be confused by the need for the hypothesis, since it relates to convexity. In some classes, it is not until this point that students recognize that they need to consider such figures, and they have to go back and revise all of the work they have done on the other tasks in this section. 
+\end{conjecture}
+
+
+\clearpage
+\setcounter{section}{3}
+\setcounter{problem}{0}
+
+\section{
 
 
 \clearpage
