add material on section 3 to instr manual

--- a/instructors_manual.tex
+++ b/instructors_manual.tex
@@ -117,7 +117,11 @@ At this point, we are usually just over time, so I let the class go with wishes 
 
 \subsection{Subsequent Meetings}
 
-include note about usual progress.
+include note about usual progress. talk about "two students with different arguments for the same result."
+
+\subsection{On the definition of a Polygon}
+
+discussion about my loose defn of polygon.
 
 \subsection{Student Made Conjectures \& the missing defns}
 
@@ -151,7 +155,7 @@ The final examination is a week-long take-home.
 I again ask four or five questions, each of which is new to the students.
 There is usually one construction problem that is quite straightforward.
 I include this to be sure everyone has some measure of success on the exam.
-I also include a conjecture that is a biconditional statment, one direction being false.
+I also include a conjecture that is a bi-conditional statement, one direction being false.
 This is the challenging part of the exam: to notice the error, prove it is an error, and then repair the statement with the addition of a hypothesis.
 If I have a question if a student deserves an A, quality work on this problem can change my mind.
 An example exam is at the end of this guide.
@@ -233,7 +237,7 @@ This conjecture lets them shore up their belief in the statement.
 This result often gets proved very quickly, as it is a simple triangle congruence argument. I always stop things for a short discussion about how making an extra hypothesis can keep us from being stuck: we get to claim progress and we focus attention on what remains to be considered. I encourage them to work this way.
 \end{conjecture}
 
-\clearpage
+
 \setcounter{section}{2}
 \setcounter{problem}{0}
 \section{The Geometry of Kites}
@@ -268,12 +272,48 @@ Many students will be confused by the need for the hypothesis, since it relates 
 \end{conjecture}
 
 
-\clearpage
+
 \setcounter{section}{3}
 \setcounter{problem}{0}
+\section{The Geometry of Rectangles}
 
-\section{
+The most challenging aspect of this section for students is that they remember facts about rectangles, but often they are not sure which parts are part of the definition and which parts are theorems. We open with the definition as a reminder.
 
+\begin{conjecture}
+This item and the next are straightforward items, but they are the first times that students will be required to use results about parallel lines and right angles. A discussion of the parallel postulate might come up.
+
+In any case, it is important to get the students to focus on using the definition as written, not as they vaguely recall.
+\end{conjecture}
+
+\begin{conjecture}
+This item can be derived as a simple consequence of the last and Euclid I.34. Students often just give their own proof independent of I.34.
+
+I have had classes prove that this item is a consequence of the last item, and then also prove that the last item is a consequence of this one. It is then important to have a conversation about equivalent statements, and how we don't really know either of them, yet.
+\end{conjecture}
+
+\begin{conjecture}
+Beware! Students often just assume that the diagonals of a rectangle meet. If it seems to be sliding by the class, I will ask, "How do you know that point exists?" That will catch the presenter by surprise, so I often help them to modify their result by adding a hypothesis, and then we add an item to the student generated task sequence. Be sure to point out the similarity to Conjecture 1.2, though students will usually already see that.
+\end{conjecture}
+
+\begin{conjecture}
+This is incorrect, but in a sneaky way. As my definition of polygon allows for non-simple figures, it is possible to construct a counter example. Simply reflect half of a rectangle in one of its diagonals. Alternately, construct a non-isosceles right triangle and then reflect the legs in the perpendicular bisector of the hypotenuse.
+
+Students often ``prove'' this result as written and get it past the class. When this happens, I try to find a way to make them realize it (without telling them) by asking pointed questions about how the assumptions in this item and the next one are different. 
+It is also possible to address this when Thales' theorem in section 7 is proved.
+\end{conjecture}
+
+\begin{conjecture}
+This can trip students up as they try to give a proof by contradiction and use the parallel postulate at the same time. It helps to ask the students to work through the logic on this one extra slowly.
+\end{conjecture}
+
+\begin{conjecture}
+This is challenging. Don't let a struggling student spin on it too long.
+\end{conjecture}
+
+
+\begin{conjecture}
+This is a simple corollary of the last item, if you draw diagonals of ABCD. Again, this can be an opportunity to show students that non-convex and non-simple figures exist. I usually ask students if they looked at this using GeoGebra, and then open up a GeoGebra sheet to show them how this looks when the input quadrilateral is dragged around. Students who have not considered it might ask "Does that count?" when they see those figures show up on the screen. This is an opportunity to start the conversation.
+\end{conjecture}
 
 \clearpage
 \section{Appendix: Supplementary Documents}
